# PaddleOCR-ONNX-Service

./: CMakeLists.txt  MODEL_SETUP.md  README.md  vcpkg.json
.github/workflows/: build.yaml  ci.yaml
config/: service_config.json
scripts/: build.bat  run.bat  test_client.py
src/: main.cpp  ocr_detect.cpp  ocr_detect.h  ocr_inference.cpp  ocr_inference.h  ocr_recognize.cpp  ocr_recognize.h  ocr_service.cpp  ocr_service.h
tests/: CMakeLists.txt  test_main.cpp
